  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.1.1 2023/02/xx
  - all - OpenSearch/Elasticsearch name cleanup
  - all - cleanup remove dependencies
  - cont3xt - raw create link groups
  - cont3xt - two clicks to delete link groups or links

4.1.0 2023/01/10
  - release - glib 2.72.4 cyberchef 9.55.0 flot 4.2.3 d3 7.7
  - db.pl - backup/restore wasn't dealing with templates correctly
  - db.pl - upgrade failed if there was no moloch_shared user
  - db.pl - repair now fixes missing history/ecs templates
  - db.pl - fix users-export/users-import
  - cont3xt - support missing auth and userTmpl settings
  - cont3xt - Hide link group when no links match filter
  - cont3xt - Added landing page
  - capture - allow wise field dst.ip:port
  - capture - add VNI field
  - capture - initial tzsp reader support
  - capture - y2038 fixes
  - capture - Integer ops in rules now support a leading min or max which only 
              sets the value if less than or greater than current value
  - wise - added usersElasticsearchBasicAuth setting and lmdb cache support
  - wise - add passivetotal value action if at least key is defined
  - viewer - fix es node stats for different node.roles
  - viewer/cont3xt - can now search roles
  - viewer/cont3xt - don't show change password menu item if web auth is enabled for
             user and disableUserPasswordUI is true

4.0.3 2022/11/28
  - release - cyberchef 9.54.0
  - release - copy systemd files instead of soft linking
  - releaes - capture/viewer systemd files now After OpenSearch/Elasticsearch
  - capture - on short runs, field definitions weren't getting updated
  - capture - s3 writer sets s3Compress to false with s3WriteGzip true
  - capture - JA3s value was sometimes incorrect