@@ -29,7 +29,8 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 
 4.1.1 2023/02/xx
   - all - OpenSearch/Elasticsearch name cleanup
-  - all - cleanup remove dependencies
+  - all - cleanup nodejs dependencies
+  - capture - support ERSPAN Type I and vlan for Type II
   - cont3xt - raw create link groups
   - cont3xt - two clicks to delete link groups or links
 
